dist/immich/Deployment.immich-machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: machine-learning
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: immich
  name: immich-machine-learning
  namespace: immich
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: immich-machine-lear-immich-machine-learning-deployment-c8abd19c
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: machine-learning
        app.kubernetes.io/name: immich
        cdk8s.io/metadata.addr: immich-machine-lear-immich-machine-learning-deployment-c8abd19c
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: IMMICH_MACHINE_LEARNING_URL
              value: http://immich-machine-learning:3003
            - name: REDIS_HOSTNAME
              value: immich-valkey-master
            - name: REDIS_PORT
              value: "6379"
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: valkey-password
                  name: immich-valkey
            - name: DB_DATABASE_NAME
              value: immich
            - name: DB_HOSTNAME
              value: immich-rw.postgres.svc.cluster.local
            - name: DB_PORT
              value: "5432"
            - name: DB_USERNAME
              value: immich
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_PASSWORD
                  name: db-creds
            - name: TRANSFORMERS_CACHE
              value: /cache
            - name: MACHINE_LEARNING_MODEL_REVISION
              value: v2
          image: ghcr.io/immich-app/immich-machine-learning
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 3003
              scheme: HTTP
          name: immich-machine-learning
          ports:
            - containerPort: 3003
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 3003
              scheme: HTTP
          resources:
            limits:
              memory: 4096Mi
            requests:
              cpu: 1500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /cache
              name: pvc-cache
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-cache
          persistentVolumeClaim:
            claimName: cache
            readOnly: false
