dist/immich/Deployment.immich-microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: microservices
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: immich
  name: immich-microservices
  namespace: immich
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: immich-microservices-immich-microservices-deployment-c8108194
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: microservices
        app.kubernetes.io/name: immich
        cdk8s.io/metadata.addr: immich-microservices-immich-microservices-deployment-c8108194
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: IMMICH_MACHINE_LEARNING_URL
              value: http://immich-machine-learning:3003
            - name: REDIS_HOSTNAME
              value: immich-valkey-master
            - name: REDIS_PORT
              value: "6379"
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: valkey-password
                  name: immich-valkey
            - name: DB_DATABASE_NAME
              value: immich
            - name: DB_HOSTNAME
              value: immich-rw.postgres.svc.cluster.local
            - name: DB_PORT
              value: "5432"
            - name: DB_USERNAME
              value: immich
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_PASSWORD
                  name: db-creds
            - name: IMMICH_WORKERS_EXCLUDE
              value: api
            - name: IMMICH_TELEMETRY_INCLUDE
              value: all
          image: ghcr.io/immich-app/immich-server
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8082
          name: immich-microservices
          ports:
            - containerPort: 3001
            - containerPort: 8082
              name: metrics
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8082
          resources:
            limits:
              memory: 6144Mi
            requests:
              cpu: 2000m
              memory: 2048Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /opt/pictures
              name: pvc-nfs-media-pictures
            - mountPath: /usr/src/app/upload
              name: pvc-nfs-media-pictures
              subPath: immich
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-nfs-media-pictures
          persistentVolumeClaim:
            claimName: nfs-media-pictures
            readOnly: false
