dist/immich/Service.immich-machine-learning.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: machine-learning
    app.kubernetes.io/name: immich
  name: immich-machine-learning
  namespace: immich
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3003
      targetPort: 3003
  selector:
    cdk8s.io/metadata.addr: immich-machine-lear-immich-machine-learning-deployment-c8abd19c
  type: ClusterIP
