dist/immich/Service.immich-microservices.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: microservices
    app.kubernetes.io/name: immich
  name: immich-microservices
  namespace: immich
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3001
      targetPort: 3001
    - name: metrics
      port: 8082
      targetPort: 8082
  selector:
    cdk8s.io/metadata.addr: immich-microservices-immich-microservices-deployment-c8108194
  type: ClusterIP
