dist/immich/Service.immich-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: immich
  name: immich-server
  namespace: immich
spec:
  externalIPs: []
  ports:
    - name: http
      port: 2283
      targetPort: 2283
    - name: metrics
      port: 8081
      targetPort: 8081
  selector:
    cdk8s.io/metadata.addr: immich-server-immich-server-deployment-c83cd3c1
  type: ClusterIP
