dist/immich/Service.immich-valkey-master.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: valkey
  name: immich-valkey-master
  namespace: immich
spec:
  ports:
    - name: tcp-valkey
      port: 6379
      targetPort: valkey
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: valkey
  type: ClusterIP
