dist/immich/Service.redis-redis-sts-service-c8344872.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-redis-sts-service-c8344872
  namespace: immich
spec:
  clusterIP: None
  externalIPs: []
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    cdk8s.io/metadata.addr: redis-redis-sts-c8cbaa00
  type: ClusterIP
