dist/immich/Service.redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: redis
  name: redis
  namespace: immich
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: redis
